--- a/templates/service/list_service.html
+++ b/templates/service/list_service.html
@@ -32,9 +32,9 @@
                     </div>
                 </div>
             </div>
-            {% for service in service %}
-                {% include 'service/service_card.html' %}
-            {% endfor %}
+
+                {% include 'service/service_card_json.html' %}
+
             <div class="col-sm-12 d-lg-none d-md-block">
                 <div class="media pt-2 pb-2">
                     <div class="media-body">
