--- a/templates/service/list_service.html
+++ b/templates/service/list_service.html
@@ -64,6 +64,7 @@
       success: function(response){
         console.log(response);
         var html;
+        var modal;
         var url_facebook = "{% static 'img/facebook.png' %}";
         var sitio = "{% static 'img/sitio.png'%}";
         var estrella = "{% static 'img/estrella.png' %}";
@@ -114,6 +115,24 @@
 
           
           $("#list_json").append(html);
+          
+          modal = '<div class="modal fade" id="'+element.user+'" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">';
+          modal+= '<div class="modal-dialog modal-lg" role="document">';
+          modal+= ' <div class="modal-content">';
+          modal+= '<div class="modal-header">';
+          modal+= ' <h5 class="modal-title" id="'+element.user+'">'+ '@'+element.user+' | '+element.title+'</h5>';
+          modal+= '<button type="button" class="close" data-dismiss="modal" aria-label="Close">';
+          modal+= '<span aria-hidden="true">&times;</span>';
+          modal+= '</button>';
+          modal+= '</div>';
+          modal+= ' <div class="modal-body">';
+          modal+= '<img class="img-fluid border rounded" src="'+element.picture_logo+'" alt="'+element.title+'"> </div>';
+          modal+= '</div>';
+          modal+= '</div>';
+          modal+= '</div>';
+          modal+= '';
+
+          $("#modal_json").append(modal);
         })//end each
 
 
@@ -179,6 +198,8 @@
         //$("#list_json").text("");
         //ListService();
       });
+
+      // function modal
   </script>
 {% endblock js %}
     
