--- a/templates/service/image_modal.html
+++ b/templates/service/image_modal.html
@@ -1,5 +1,5 @@
 {% load static %}
-<div class="modal fade" id="{{service.user.username}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="modal{{service.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
