--- a/templates/service/service_card_json.html
+++ b/templates/service/service_card_json.html
@@ -4,7 +4,7 @@
     <div id="list_json">
 
     </div>
-
+    <ul class="pagination pagination-lg pager" id="myPager"></ul>
 </div>
 
 <div id="modal_json">
