--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -58,7 +58,7 @@
     </div>
 </div>
 {% include 'service/image_modal.html' %}
-
+{% include 'service/modal_delete.html' %}
 
 {% block js %}
 <script>
