--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -14,11 +14,12 @@
             <img src="{% static 'img/facebook.png' %}" alt="" width="30" height="30" class="color-expand">
         </a>
         {% endif %}
-                        <!--container loader
-                        <div class="col-12 load" id="load{{service.id}}" style="position: absolute;">
-                            <div class="loader" id="loader">Loading...</div>
-                        </div>
-                        -->       
+    <!--container loader
+    <div class="col-12" style="position: absolute;">
+        <div class="loader" id="load{{service.id}}">Loading...</div>
+    </div>
+    -->
+                               
     </div>
     {% if service.picture_logo %}
     <a href="" data-toggle="modal" data-target="#modal{{service.id}}">
