--- a/templates/service/modal_delete.html
+++ b/templates/service/modal_delete.html
@@ -3,7 +3,7 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Eliminar <strong class="text-primary">{{service.title}}</strong> de <strong class="text-primary">{{service.person.user}}</strong></h5>
+          <h5 class="modal-title">Eliminar</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
