--- a/templates/user/log_in.html
+++ b/templates/user/log_in.html
@@ -33,17 +33,17 @@
                 {% endif %}
                 <div class="form-label-group pt-2">
                   <label for="inputEmail">Nombre de Usuario</label>
-                  <input type="text" id="inputEmail" class="form-control" placeholder="User address" required autofocus name="username">
+                  <input type="text" id="inputEmail" class="form-control" placeholder="Usuario" required autofocus name="username">
                 </div>
               
                 <div class="form-label-group pt-2 pb-2">
                   <label for="inputPassword">Contraseña</label>
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required name="password">
+                  <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required name="password">
                 </div>
               
                 <div class="checkbox mb-3">
                   <label>
-                    <input type="checkbox" value="remember-me"> Remember me
+                    <input type="checkbox" value="remember-me"> Recuerdame
                   </label>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Ingresar</button>
