--- a/templates/user/sign_up.html
+++ b/templates/user/sign_up.html
@@ -31,32 +31,32 @@
                 {% endif %}
                 <div class="form-label-group pt-2">
                   <label for="inputEmail">Nombre de usuario</label>
-                  <input type="text" id="inputText" class="form-control" placeholder="User name" required autofocus name="username">
+                  <input type="text" id="inputText" class="form-control" placeholder="Usuario" required autofocus name="username">
                 </div>
               
                 <div class="form-label-group pt-2">
                   <label for="inputPassword">Contraseña</label>
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password" required name="password">
+                  <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required name="password">
                 </div>
 
                 <div class="form-label-group pt-2">
                   <label for="inputPassword">Confirmar contraseña</label>
-                  <input type="password" id="inputPassword" class="form-control" placeholder="Password confirmation" required name="password_confirmation">
+                  <input type="password" id="inputPassword" class="form-control" placeholder="Confirmar contraseña" required name="password_confirmation">
                 </div>
 
                 <div class="form-label-group pt-2">
                   <label for="inputPassword">Nombre</label>
-                  <input type="text" id="inputText" class="form-control" placeholder="First name" required name="first_name">
+                  <input type="text" id="inputText" class="form-control" placeholder="Nombre" required name="first_name">
                 </div>
 
                 <div class="form-label-group pt-2">
                   <label for="inputPassword">Apellido</label>
-                  <input type="text" id="inputText" class="form-control" placeholder="Last name" required name="last_name">
+                  <input type="text" id="inputText" class="form-control" placeholder="Apellido" required name="last_name">
                 </div>
 
                 <div class="form-label-group pt-2 pb-2">
                   <label for="inputPassword">Email</label>
-                  <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required name="email">
+                  <input type="email" id="inputEmail" class="form-control" placeholder="Email" required name="email">
                 </div>
               
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Registraté</button> 
