--- a/templates/service/new.html
+++ b/templates/service/new.html
@@ -23,7 +23,7 @@
                             class="form-control {% if form.title.errors %}is-invalid{% endif %}"
                             type="text"
                             name="title"
-                            placeholder="Añade un Titulo"
+                            placeholder="Titulo del servicio"
                         >
                         <div class="invalid-feedback">
                             {% for error in form.title.errors %}{{ error }}{% endfor %}
