--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -10,12 +10,12 @@
 <div class="container-fluid work">
   <div class="row justify-content-md-center" style="height: 650px;">
     <div class="container" style="height: 100%;">
-      <h2 class="mt-5 mb-4 font-weight-bolder text-light text-center">Publica y busca servicios en nuestra plataforma.</h2>
+      <h2 class="mt-5 mb-4 font-weight-bolder text-light text-center">Publica y busca servicios en nuestra plataforma</h2>
       <div class="row">
         <div class="col-lg-6 mt-2 col-sm-12">
           <h5 class="text-light mb-3 mt-3 font-italic ">
             Encuentra clientes que te requieran de una manera sencilla y totalmente gratis!
-            Si tenés un oficio o sos bueno haciendo algo, podés publicarlo en este espacio diseñado para vos!
+            Si tenés un oficio o queres promocionar tus productos, podés publicarlo en este espacio diseñado para vos!
           </h5>
           <h5 class="text-light font-italic">
             ¿Necesitas emplear un servicio y no sabes donde buscar?
@@ -34,13 +34,13 @@
     <div class="col-lg-4 mt-2 mb-2">
       <h5 class='text-dark'>
         <img src="{% static 'img/entrar.png' %}" alt="" width="40" height="auto" class="mr-2"> Registrarse es facil, solo necesitas un alias, tu email y tu nombre y apellido. 
-        Una vez registrado ingresa con el nombre de usuario que elegiste y tu contraseña.
+        Una vez registrado ingresá con el nombre de usuario que elegiste y tu contraseña.
       </h5>
     </div>
     <div class="col-lg-4 mt-2 mb-2">
       <h5 class='text-dark'>
         <img src="{% static 'img/service.png' %}" alt="" width="40" height="auto" class="mr-2"> Es importante que detalles lo que ofreces para que los demás usuarios
-        puedan encontrarte rapidamente, ademas mostrar lo que haces con una foto es mucho mejor.
+        puedan encontrarte rápidamente, además mostrar lo que haces con una foto es mucho mejor.
       </h5>
     </div>
     <div class="col-lg-4 mt-2 mb-2">
