--- a/templates/service/search.html
+++ b/templates/service/search.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 {% block head %}
-<title>Search</title>
+<title>Búsqueda</title>
 {% endblock %}
   
 {% load static %}
