--- a/templates/user/detail.html
+++ b/templates/user/detail.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 {% block head %}
-<title>Detail {{user.username}}</title>
+<title>Detalle de {{user.username}}</title>
 {% endblock %}
   
 {% load static %}
