--- a/templates/user/log_in.html
+++ b/templates/user/log_in.html
@@ -1,7 +1,7 @@
 {% extends "base/base.html" %}
 
 {% block head %}
-<title>Login</title>
+<title>Iniciar sesíon</title>
 {% endblock %}
   
 {% block nav %}
