--- a/templates/user/sign_up.html
+++ b/templates/user/sign_up.html
@@ -1,6 +1,6 @@
 {% extends "base/base.html" %}
 {% block head %}
-<title>Sign up</title>
+<title>Registrarse</title>
 {% endblock %}
   
 {% block nav %}
@@ -59,7 +59,7 @@
                   <input type="email" id="inputEmail" class="form-control" placeholder="Email" required name="email">
                 </div>
               
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Registraté</button> 
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Regístrate</button> 
                 <p class="mt-5 mb-3 text-muted text-center">&copy; Municipalidad de Tinogasta <script>document.write(new Date().getFullYear());</script></p>
               </form>
         </div>
