--- a/templates/user/update_person.html
+++ b/templates/user/update_person.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 {% block head %}
-<title>Update {{user.username}}</title>
+<title>Actualizar {{user.username}}</title>
 {% endblock %}
   
 {% load static %}
