--- a/templates/service/list_service.html
+++ b/templates/service/list_service.html
@@ -1,6 +1,6 @@
 {% extends 'base/base.html' %}
 {% block head %}
-<title>List service</title>
+<title>Inicio</title>
 {% endblock %}
   
 {% load static %}
