--- a/templates/user/log_in.html
+++ b/templates/user/log_in.html
@@ -41,13 +41,13 @@
                   <input type="password" id="inputPassword" class="form-control" placeholder="Contraseña" required name="password">
                 </div>
               
-                <div class="checkbox mb-3">
+                <div class="checkbox">
                   <label>
-                    <input type="checkbox" value="remember-me"> Recuerdame
+                    <p class="pt-2"><a href="{% url 'password_reset' %}">He olvidado mi contraseña</a></p>
                   </label>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Ingresar</button>
-                <p class="pt-2"><a href="{% url 'password_reset' %}">He olvidado mi contraseña</a></p>
+                
                 <p class="mt-5 mb-3 text-muted text-center">&copy; Municipalidad de Tinogasta <script>document.write(new Date().getFullYear());</script></p>
               </form>
         </div>
