--- a/templates/user/sign_up.html
+++ b/templates/user/sign_up.html
@@ -20,7 +20,7 @@
                     <img class="mb-4" src="{%static 'img/saludo.png'%}" alt="" width="75" height="75">
                   </a>
                   -->
-                  <h1 class="h3 mb-3 font-weight-normal">Registro de usuario</h1>
+                  <h1 class="h3 mb-3 font-weight-normal">Registro de Usuario</h1>
                 </div>
                 {% if messages %}
                 {% for message in messages%}
