--- a/templates/service/list_service.html
+++ b/templates/service/list_service.html
@@ -12,15 +12,15 @@
 {% block content %}
     <div class="container mt-2 mb-2">
         <div class="row">
-            <div class=" d-none d-lg-block d-md-none target p-2" style="position: fixed; width: 18%; height: auto;">
+            <div class=" d-none d-lg-block d-md-none target p-2" style="position: fixed; width: 20%; height: auto;">
                 <div class="media">
                     <div class="media-body">
                         <img src="{% static 'img/publicidad.png' %}" alt="" width="100%" height="auto">
                     </div>
                 </div>
-                <div class="media pt-4">
+                <div class="media pt-4 text-center">
                     <div class="media-body">
-                        <img src="{% static 'img/publicidad.png' %}" alt="" width="100%" height="auto">
+                        <img src="{% static 'img/publicidad.png' %}" alt="" width="80%" height="auto">
                     </div>
                 </div>
                 <p class="mt-2 mb-2 text-muted text-center">&copy; Municipalidad de Tinogasta <script>document.write(new Date().getFullYear());</script></p>
