--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -61,6 +61,14 @@ footer{
   100%{transform: rotate(45deg) scale(1);}
 }
 
+.bubli-grant{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+}
+
+
+
 /* animacion cargando */
 .loader {
     font-size: 20px;
