--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -15,7 +15,7 @@
         <div class="col-lg-6 mt-2 col-sm-12">
           <h5 class="text-light mb-3 mt-3 font-italic ">
             ¡Encuentra clientes que te requieran de una manera sencilla y totalmente gratis! 
-            ¡Si tenés un oficio o quieres promocionar tus productos, podes publicarlo en este espacio diseñado para vos!
+            ¡Si tenés un oficio o quieres promocionar tus productos, podés publicarlo en este espacio diseñado para vos!
           </h5>
           <h5 class="text-light font-italic">
             ¿Necesitas emplear un servicio y no sabes dónde buscar? 
@@ -33,20 +33,22 @@
   <div class="row pt-3 pb-3 mt-4 mb-4">
     <div class="col-lg-4 mt-2 mb-2">
       <h5 class='text-dark'>
-        <img src="{% static 'img/entrar.png' %}" alt="" width="40" height="auto" class="mr-2"> Registrarse es fácil, solo necesitas un alias, tu email y tu nombre y apellido. 
+        <img src="{% static 'img/entrar.png' %}" alt="" width="40" height="auto" class="mr-2"> Registrarse es fácil, 
+        sólo necesitas un alias, tu email y tu nombre y apellido. 
         Una vez registrado ingresa con el nombre de usuario que elegiste y tu contraseña.
       </h5>
     </div>
     <div class="col-lg-4 mt-2 mb-2">
       <h5 class='text-dark'>
-        <img src="{% static 'img/service.png' %}" alt="" width="40" height="auto" class="mr-2"> Es importante que detalles lo que ofreces para que los demás usuarios puedan encontrarte rápidamente, 
+        <img src="{% static 'img/service.png' %}" alt="" width="40" height="auto" class="mr-2"> Es importante que detalles lo que ofreces 
+        para que los demás usuarios puedan encontrarte rápidamente, 
         además mostrar lo que haces con una foto es mucho mejor.
       </h5>
     </div>
     <div class="col-lg-4 mt-2 mb-2">
       <h5 class='text-dark'>
         <img src="{% static 'img/star.png' %}" alt="" width="40" height="auto" class="mr-2"> Si conoces y contrataste algunos de estos servicios, 
-        podes clasificarlos con las estrellas, es importante para el usuario que lo ofrece y para recomendarlo a los demás.
+        podés clasificarlos con las estrellas, es importante para el usuario que lo ofrece y para recomendarlo a los demás.
       </h5>
     </div>
   </div>
