--- a/templates/base/paginate.html
+++ b/templates/base/paginate.html
@@ -2,17 +2,17 @@
     <ul class="pagination justify-content-end">
         {% if page_obj.has_previous %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+            <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
         </li>
         {% endif%}
         <li class="page-item">
             <a href="" class="page-link">
-                {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                {{ page_obj.number }} de {{ page_obj.paginator.num_pages }}
             </a>
         </li> 
         {% if page_obj.has_next %}
         <li class="page-item">
-            <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+            <a class="page-link" href="?page={{ page_obj.next_page_number }}">Próximo</a>
         </li>
         {% endif%}
     </ul>
