--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -23,9 +23,9 @@
     </div>
     {% if service.picture_logo %}
     <a href="" data-toggle="modal" data-target="#modal{{service.id}}">
-        <img class="img-fluid mt-3 border rounded" src="{{ service.picture_logo.url }}" alt="{{ service.title }}"><span class="badge badge-primary">{{service.category}}</span>
+        <img class="img-fluid mt-3 border rounded" src="{{ service.picture_logo.url }}" alt="{{ service.title }}" width="100%">
     </a>
-    
+    <span class="badge badge-primary">{{service.category}}</span>
     {% endif %}
     <p class="mt-1 mb-0 text-primary">{{service.description}}</p>
     <form class="form-inline">
