--- a/templates/service/image_modal.html
+++ b/templates/service/image_modal.html
@@ -9,7 +9,7 @@
           </button>
         </div>
         <div class="modal-body">
-            <img class="img-fluid border rounded" src="{{ service.picture_logo.url }}" alt="{{ service.title }}">
+            <img class="img-fluid border rounded" src="{{ service.picture_logo.url }}" alt="{{ service.title }}" style="width: 100%; height: auto;">
         </div>
       </div>
     </div>
