--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -23,7 +23,7 @@
     </div>
     {% if service.picture_logo %}
     <a href="" data-toggle="modal" data-target="#modal{{service.id}}">
-        <img class="img-fluid mt-3 border rounded" src="{{ service.picture_logo.url }}" alt="{{ service.title }}" width="100%">
+        <img class="img-fluid mt-3 border rounded" src="{{ service.picture_logo.url }}" alt="{{ service.title }}" style="width: 100%; height: auto;">
     </a>
     <span class="badge badge-primary">{{service.category}}</span>
     {% endif %}
