--- a/templates/service/list_service.html
+++ b/templates/service/list_service.html
@@ -26,7 +26,7 @@
                     </div>
                 </div>
                 <form class="form-block text-center" action="">
-                    <a class="btn btn-outline-primary m-2"  href="{% url 'contact' %}">Tu Publicidad en TRATO HECHO</a>
+                    <a class="m-2"  href="{% url 'contact' %}">Tu Publicidad en TRATO HECHO</a>
                 </form>
                 <p class="mt-2 mb-2 text-muted text-center">&copy; Municipalidad de Tinogasta <script>document.write(new Date().getFullYear());</script></p>
             </div>
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <form class="form-block text-center" action="">
-                    <a class="btn btn-outline-primary m-2"  href="{% url 'contact' %}">Tu Publicidad en TRATO HECHO</a>
+                    <a class="m-2"  href="{% url 'contact' %}">Tu Publicidad en TRATO HECHO</a>
                 </form>
             </div>
         </div>
