--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,6 +16,13 @@
     -webkit-transition: all 500ms;
 }
 
+.expand:hover{
+  transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -webkit-transition: all 500ms;
+}
+
 .body{
     background-color: rgb(247, 247, 241);
 }
