--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -5,7 +5,9 @@
             <img class="mr-3 rounded-circle" src="{{ service.person.picture.url }}" alt="@{{ service.user.name }}" width="50" height="50">
         </a>
         <div class="media-body">
-            <h5 class="mt-0"><strong class="text-primary">@{{service.user.username}}</strong></h5>
+            <a href="{% url 'detail' service.user.username %}">
+                <h5 class="mt-0">@{{service.user.username}}</h5>
+            </a>
             <h6 class="ml-0 mt-1">{{service.title}}</h6>
         </div>
         
