--- a/templates/user/sign_up.html
+++ b/templates/user/sign_up.html
@@ -31,7 +31,7 @@
                 {% endif %}
                 <div class="form-label-group pt-2">
                   <label for="inputEmail">Nombre de usuario</label>
-                  <input type="text" id="inputText" class="form-control" placeholder="Usuario" required autofocus name="username">
+                  <input type="text" id="inputText" class="form-control" placeholder="nombre_de_usuario" required autofocus name="username">
                 </div>
               
                 <div class="form-label-group pt-2">
