--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -16,6 +16,9 @@
 </head>
 <body class="body">
   <!-- Facebook -->
+  <div  id = "fb-root" > </div> 
+  <script  async  defer  crossorigin = "anónimo"  src = "https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v7.0"  nonce = "RzxQkIJG" > </script> 
+  
   {% block nav %}
   {% endblock nav%}
 
