--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -58,6 +58,7 @@
             <img src="{% static 'img/eliminar.png' %}" alt="" width="30" height="30" class="color-expand">
         </a>
         {% endif %}
+        <div class="fb-share-button" data-href="http://www.tratohecho.net.ar/service/service/0/" data-layout="button" data-size="large"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Fwww.tratohecho.net.ar%2Fservice%2Fservice%2F0%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Compartir</a></div>
     </div>
 </div>
 {% include 'service/image_modal.html' %}
