--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -32,6 +32,7 @@
               <a class="dropdown-item" href="{% url 'search_category' 'Servicios Legales y Financieros'%}">Servicios Legales y Financieros</a>
               <a class="dropdown-item" href="{% url 'search_category' 'Viajes y Trasportes'%}">Viajes y Trasportes</a>
               <a class="dropdown-item" href="{% url 'search_category' 'Gastronomia'%}">Gastronomia</a>
+              <a class="dropdown-item" href="{% url 'search_category' 'Productos Regionales y Artesanias'%}">Productos Regionales y Artesanias</a>
             </div>
           </li>
           <li class="nav-item">
