--- a/templates/user/update_person.html
+++ b/templates/user/update_person.html
@@ -32,7 +32,7 @@
                 {% endif %}
                     <div class="media-body">
                         <h5 class="ml-4">@{{user.username}} | {{user.get_full_name}}</h5>
-                        <p class="ml-4"><input type="file" name="picture" required="true"></p>
+                        <p class="ml-4"><input type="file" name="picture" required="false"></p>
                     </div>
                 </div>
     
