--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -11,7 +11,7 @@
         <ul class="navbar-nav mr-auto ">
         {% if user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link" href="{% url 'list' %}">Inicio</a>
+            <a class="nav-link" href="{% url 'list' %}">Publicaciones</a>
           </li>
           <li class="nav dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
