--- a/templates/user/sign_up.html
+++ b/templates/user/sign_up.html
@@ -32,6 +32,7 @@
                 <div class="form-label-group pt-2">
                   <label for="inputEmail">Nombre de usuario</label>
                   <input type="text" id="inputText" class="form-control" placeholder="nombre_de_usuario" required autofocus name="username">
+                  <div class="feedback text-success">Recuerda tu nombre de usuario para iniciar sesión.</div>
                 </div>
               
                 <div class="form-label-group pt-2">
@@ -57,6 +58,7 @@
                 <div class="form-label-group pt-2 pb-2">
                   <label for="inputPassword">Email</label>
                   <input type="email" id="inputEmail" class="form-control" placeholder="Email" required name="email">
+                  <div class="feedback text-success">Lo necesitarás para recuperar tu contraseña.</div>
                 </div>
               
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Regístrate</button> 
