aviso-reestabler-contraseña

--- a/templates/registration/password_reset_forms.html
+++ b/templates/registration/password_reset_forms.html
@@ -8,7 +8,7 @@
     <div class="row align-items-center">
         <div class="col-lg-4 col-sm-12 offset-lg-4 p-4 target mt-5 ">
             <h2>Recuperar contraseña</h2>
-
+            <p class="text-primary">Recibiras un email con tu nombre de usuario y un enlace para reestablecer tu contraseña.</p>
             <form class="form-block m-2" action="" method="POST">
                 {% csrf_token %}
                 <label for="id_email">Email: </label>
