--- a/templates/user/log_in.html
+++ b/templates/user/log_in.html
@@ -43,7 +43,7 @@
               
                 <div class="checkbox">
                   <label>
-                    <p class="pt-2"><a href="{% url 'password_reset' %}">He olvidado mi contraseña</a></p>
+                    <p class="pt-2"><a href="{% url 'password_reset' %}">He olvidado mi contraseña y nombre de usuario</a></p>
                   </label>
                 </div>
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Ingresar</button>
