--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}"/>
-    <script data-ad-client="ca-pub-3715716798404343" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body class="body">
   <!-- Facebook -->
@@ -114,6 +113,11 @@
             sonido.play();
         });
       });
+
+      $(document).ready(function() {
+        $(".img-aparece").fadeIn(2000);
+      }); 
+
   </script>
 </body>
 </html>
