--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -16,16 +16,16 @@
             <img src="{% static 'img/facebook.png' %}" alt="" width="30" height="30" class="color-expand">
         </a>
         {% endif %}
-    <!--container loader
+    <!--container 
     <div class="col-12" style="position: absolute;">
-        <div class="loader" id="load{{service.id}}">Loading...</div>
+        <div class="loader" style="position: absolute;width: 20px;">Loading...</div>
     </div>
-    -->
+    loader-->
                                
     </div>
     {% if service.picture_logo %}
     <a href="" data-toggle="modal" data-target="#modal{{service.id}}">
-        <img class="img-fluid mt-3 border rounded" src="{{ service.picture_logo.url }}" alt="{{ service.title }}" style="width: 100%; height: auto;">
+        <img class="img-fluid mt-3 border rounded img-aparece" src="{{ service.picture_logo.url }}" alt="{{ service.title }}" style="width: 100%; height: auto;">
     </a>
     <span class="badge badge-primary">{{service.category}}</span>
     {% endif %}
@@ -65,61 +65,6 @@
 
 {% block js %}
 <script>
-        /*
-        $('.like').click(function(){
-         console.log("dentro de funcion like");
-         $.ajax({
-            type: "POST",
-            url: "{% url 'like' %}",
-            data: {'service_id': $(this).attr('name'), 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-            dataType: "json",
-            success: function(response) {
-                //alert(' likes count is now ' + response.likes_count);
-                var count = "";
-                count+= response.likes_count;
-                var id = response.service_pk;
-                
-     
-                $("#service"+id).html(count);
-     
-            },
-             error: function(rs, e) {
-                 alert(rs.responseText+ "error");
-               },
-             });
-           })
-       //delete service ajax
-      $('.eliminar').click(function(){
-       if(confirm("¿Estás seguro de eliminar esté servicio?")){
-             $.ajax({
-               type: "POST",
-               url: "{% url 'delete' %}",
-               data: {'service_id': $(this).attr('name'), 'csrfmiddlewaretoken': '{{ csrf_token }}'},
-               dataType: "json",
-               beforeSend:function(){
-                 $(".load").show();
-                 
-                 
-               },
-               success: function(response) {
-                   var id = response.service_pk;
-                   $("#none"+id).addClass("graysacale")
-                   $("#none"+id).hide(1000);
-     
-               },
-               error: function(rs, e) {
-                     alert(rs.responseText+ "error");
-               },
-             })//endajax
-             .always(function() {
-               $(".load").hide();
-             });
-         }//endif
-       else{
-         return false;
-         }
-     });
-     */
 </script>
     
 {% endblock js %}
