--- a/templates/user/detail.html
+++ b/templates/user/detail.html
@@ -32,7 +32,7 @@
                         <p>Tel: <strong class="text-primary">{{user.person.phone_number}}</strong></p>
                     </div>
                     <div class="col-sm-4 mb-2 mt-2">
-                        <a id="sound_wsp" target="_blank" href="https://api.whatsapp.com/send?phone=+54{{user.person.phone_number}}&text=Hola {{user.first_name}}! ">Enviar Whatsapp<img id="wsp" class="ml-2" src="{% static 'img/whatsapp.png' %}" alt="" width="30" height="30"></a>
+                        <a id="sound_wsp" target="_blank" href="https://api.whatsapp.com/send?phone=+54{{user.person.phone_number}}&text=Hola {{user.first_name}}! vi tu publicación en tratohecho.net.ar">Enviar Whatsapp<img id="wsp" class="ml-2" src="{% static 'img/whatsapp.png' %}" alt="" width="30" height="30"></a>
                     </div>
                     <div class="col-sm-4 mt-2">
                         {% if services %}
