--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -24,7 +24,7 @@
   {% block footer %}
   {% endblock %}
 
-  
+  {% include 'service/modal_registration.html' %}
   {% block js %}
   {% endblock js %}
   <script src="{% static 'js/jquery.min.js' %}"></script>
