--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -9,10 +9,19 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto ">
+        
+        {% if not user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'list' %}">Publicaciones</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href=""  data-toggle="modal" data-target="#modal-registration">Publicar</a>
+        </li>
+        <img class="d-none d-md-block d-lg-block" src="{% static 'img/anunciar.png' %}" alt="" width="35" height="35">
+        {% endif %}
+          
+
         {% if user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'list' %}">Publicaciones</a>
-          </li>
           <li class="nav dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Categorias
