--- a/templates/service/service_card.html
+++ b/templates/service/service_card.html
@@ -1,13 +1,26 @@
 {% load static %}
 <div class="col-lg-4 col-sm-8 offset-md-2 offset-lg-4 mb-3 pt-4 target none{{service.id}}">
     <div class="media">
+        {%if request.user.is_authenticated %}
         <a href="{% url 'detail' service.user.username %}">
             <img class="mr-3 rounded-circle" src="{{ service.person.picture.url }}" alt="@{{ service.user.name }}" width="50" height="50">
         </a>
+        {% else %}
+        <a href="" data-toggle="modal" data-target="#modal-registration">
+            <img class="mr-3 rounded-circle" src="{{ service.person.picture.url }}" alt="@{{ service.user.name }}" width="50" height="50">
+        </a>
+        {% endif %}
         <div class="media-body">
+            {%if request.user.is_authenticated %}
             <a href="{% url 'detail' service.user.username %}">
                 <h5 class="mt-0">@{{service.user.username}}</h5>
             </a>
+            {% else %}
+            <a href=""  data-toggle="modal" data-target="#modal-registration">
+                <h5 class="mt-0">@{{service.user.username}}</h5>
+            </a>
+            {% endif %}
+
             <h6 class="ml-0 mt-1">{{service.title}}</h6>
         </div>
         
@@ -51,8 +64,13 @@
             <span class="badge badge-pill mb-1 p-1 text-light d-inline mt-2" style="background-color: rgb(255, 192, 31);">{{service.liked.all.count}} Estrellas</span>
         </form>
         -->
+        {%if request.user.is_authenticated %}
         <a type="button" class="like" name="{{service.id}}"><img src="{% static 'img/estrella.png' %}" alt="" width="30" height="30"class="color-expand mb-1 mr-2"></a>
+        {% else %}
+        <a type="button"  data-toggle="modal" data-target="#modal-registration"><img src="{% static 'img/estrella.png' %}" alt="" width="30" height="30"class="color-expand mb-1 mr-2"></a>
+        {% endif%}
         <span class="badge badge-pill mb-2 p-2 text-light d-inline mt-0" style="background-color: rgb(255, 192, 31);"><strong id ='service{{service.id}}'>{{service.liked.all.count}}</strong> Estrellas</span>
+        
         {% if service.user == request.user %}
         <a type="button" class="mb-3 float-right ml-3 eliminar" name='{{service.id}}'>
             <img src="{% static 'img/eliminar.png' %}" alt="" width="30" height="30" class="color-expand">
