--- a/templates/service/modal_registration.html
+++ b/templates/service/modal_registration.html
@@ -9,7 +9,7 @@
           </button>
         </div>
         <div class="modal-body">
-            <h2>¡Debes registrarte para publicar, calificar o ver el perfil y datos de los usuarios!</h2>
+            <h2>¡Debes registrarte para publicar, calificar o ver el perfil de los usuarios!</h2>
           <form class="pt-2 pb-2">
             <a href="{%url 'sign_up'%}" class="btn btn-lg btn-success">Registrate</a>
           </form>
