--- a/templates/service/modal_registration.html
+++ b/templates/service/modal_registration.html
@@ -3,13 +3,13 @@
     <div class="modal-dialog modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Atención!</h5>
+          <h5 class="modal-title">¡Atención!</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-            <h2>¡Debes registrarte para publicar, calificar o ver el perfil de los usuarios!</h2>
+            <h2 id="data-registration"></h2>
           <form class="pt-2 pb-2">
             <a href="{%url 'sign_up'%}" class="btn btn-lg btn-success">Registrate</a>
           </form>
